package ar.edu.utn.frba.dds;

public enum OrigenHecho {
        CARGA_MANUAL,
        CONTRIBUYENTE,
        DATASET
}
