package ar.edu.utn.frba.dds.hechos;

public class ContenidoMultimedia {
    
}
