package ar.edu.utn.frba.dds.hechos;

public record Etiqueta(String nombre) {}