package ar.edu.utn.frba.dds.usuarios;

public class Administrador {
    private String nombre;
    private String apellido;

}
