@startuml

class Hecho{
- título: String
- descripción: String
- categoría: Categoria
- contenidoMultimedia: ContenidoMultimedia
- origen: OrigenHecho
- lugarAcontecimiento: Coordenada
- fechaHecho: LocalDate
- fechaDeCarga: LocalDateTime
- eliminado: boolean
- contribuyente: Contribuyente
- id: Long
- revisado: boolean
- solicitudesDeEliminacion: List<SolicitudDeEliminacion>
- solicitudesDeModificacion: SolicitudDeModificacion
- etiquetas: HashSet<Etiqueta>
--
+ solicitarEliminacion(String justificacion, Contribuyente contribuyente): SolicitudDeEliminacion
+ etiquetar(Etiqueta etiqueta): void
}

enum OrigenHecho{
CARGA_MANUAL
CONTRIBUYENTE
DATASET
PROXY
}

class Categoria{
- nombre: String
}

class Etiqueta{
- nombre: String
}

class Coleccion{
- identificador: String
- titulo: String
- descripcion: String
- criterioDePertenencia: Criterio
- algoritmoDeConsenso: IAlgoritmoDeConsenso
- fuentes: List<String>
- hechosCargadosManualmente: List<Hecho>
- hechosConsensuados: List<Hecho>
- hechos: List<Hecho>
--
+ contiene (Hecho hecho): boolean
+ aplicarFiltros(List<Hecho> hechos): List<Hecho>
+ agregarTandaDeHechos(List<Hecho> tanda): void
+ removerHechoEliminado(Hecho hecho): void
+ removerHecho(Hecho hecho): void
+ consensuarHechos(): void

}

class ContenidoMultimedia{
- pathImagen: String
}

class Criterio{
- filtros: List<Filtro>
--
+ addFiltro(Filtro filtro): Criterio
+ aplicarA(List<Hecho> listaOriginal): List<Hecho>
}

abstract class Filtro{
--
+ aplicar(List<Hecho> lista): List<Hecho>
}

class FiltroPorEliminados{
--
+ aplicar(List<Hecho> lista): List<Hecho>
}

class FiltroPorCategoria{
- categoria : Categoria
--
+  aplicar(List<Hecho> hechos): List<Hecho>
}

class FiltroPorDescripcion{
- descripcion : String
--
+  aplicar(List<Hecho> lista): List<Hecho>
}

class FiltroPorFechaDeCarga{
- desde : LocalDateTime
- hasta : LocalDateTime
--
+ aplicar(List<Hecho> lista): List<Hecho>
}

class FiltroPorFechaHecho{
- desde : LocalDate
- hasta : LocalDate
--
+ aplicar(List<Hecho> lista): List<Hecho>
}

class FiltroPorTitulo{
- titulo : String
--
+  aplicar(List<Hecho> lista): List<Hecho>
}

class FiltroPorUbicacion{
- lugar : Coordenada
--
+ aplicar(List<Hecho> lista): List<Hecho>
}

class SolicitudDeEliminacion{
- descripcion: String
- hecho: Hecho
- fechaDeCarga: LocalDateTime
- fechaDeResolucion: LocalDateTime
- estado: EstadoSolicitud
- solicitante: Contribuyente
- administradorQueResolvio: Administrador
- CANT_MINIMA_DE_CARACTERES: int = 500
--
+ resolver(Estado estado, Administrador administrador): void
}

enum EstadoSolicitud {
    PENDIENTE
    ACEPTADA
    SUGERIDOACAMBIO
    RECHAZADA
    ACEPTADACONSUGERENCIA
}


class Coordenada{
- latitud: Double
- longitud: Double
--
+ comoArray(): Double[]
+ equals(other : Coordenada): boolean
}

class Administrador{
- nombre: String
- apellido: String
}

class Contribuyente{
- id: Long
- nombre: String
- apellido: String
- fechaNacimiento: LocalDate
--
+ getEdad() : Int
}

class SolicitudDeModificacion {
- hechoViejo: Hecho;
- hechoNuevo: Hecho;
- estado: EstadoSolicitud;
--
+ resolver(nuevoEstado : EstadoSolicitud): void
}

interface IAlgoritmoDeConsenso{
+ consensuar(List<Hecho> hechos, List<String> fuentes)
}

class ConsensoAbsoluta{
+ consensuar(List<Hecho> hechos, List<String> fuentes)
}

class ConsensoMayoriaSimple{
+ consensuar(List<Hecho> hechos, List<String> fuentes)
}

class ConsensoMultiplesMenciones{
+ consensuar(List<Hecho> hechos, List<String> fuentes)
}

Hecho -r-> Categoria
Hecho --> Coordenada
Hecho -->"*" SolicitudDeEliminacion
Hecho --> ContenidoMultimedia
Hecho -r-> OrigenHecho
Hecho -->"*" Etiqueta
Hecho --> Contribuyente
Hecho --> SolicitudDeModificacion

Coleccion --> Criterio
Coleccion -->"*" Hecho

Criterio .r.> Hecho
Criterio -->"*" Filtro

FiltroPorCategoria -u-|> Filtro
FiltroPorDescripcion -u-|> Filtro
FiltroPorEliminados -u-|> Filtro
FiltroPorFechaDeCarga -u-|> Filtro
FiltroPorFechaHecho -u-|> Filtro
FiltroPorTitulo -u-|> Filtro
FiltroPorUbicacion -u-|> Filtro

SolicitudDeEliminacion --> Hecho
SolicitudDeEliminacion -d-> EstadoSolicitud
SolicitudDeEliminacion --> Contribuyente
SolicitudDeEliminacion --> Administrador

SolicitudDeModificacion -->"*" Hecho
SolicitudDeModificacion --> EstadoSolicitud

Coleccion --> IAlgoritmoDeConsenso
ConsensoAbsoluta ..|> IAlgoritmoDeConsenso
ConsensoMayoriaSimple ..|> IAlgoritmoDeConsenso
ConsensoMultiplesMenciones ..|> IAlgoritmoDeConsenso
@enduml